# football-player-simulator

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  fix_bgs.py  fix_includes.py  fix_mouse.py  fix_warnings.py  gen_engine_sync.py  gen_match.py  gen_screen_choreography.py  gen_screen_sync.py  patch.cpp  patch_cm.cpp  test_traj  test_traj.cpp  ui_polish.py  update_engine_h.py  update_match_h.py  update_screen_h.py
.agents/: AGENTS.md
.github/workflows/: windows-build.yml
src/: AssetManager.cpp  AssetManager.h  CareerHubScreen.cpp  CareerHubScreen.h  CareerManager.cpp  CareerManager.h  Database.cpp  Database.h  EuropeanCupScreen.cpp  EuropeanCupScreen.h  EventScreen.cpp  GameManager.cpp  GameManager.h  LeagueTableScreen.cpp  LeagueTableScreen.h  Match.cpp  Match.h  MatchEngine.cpp  MatchEngine.h  MatchScreen.cpp  MatchScreen.h  MatchStatsScreen.cpp  MenuScreen.cpp  MenuScreen.h  NewCareerScreen.cpp  NewCareerScreen.h  Player.cpp  Player.h  SeasonEndScreen.cpp  Settings.cpp  Settings.h  SettingsScreen.cpp  SettingsScreen.h  TrainingScreen.cpp  TrainingScreen.h  TransferScreen.cpp  TransferScreen.h  UpgradeScreen.cpp  UpgradeScreen.h  main.cpp
src/core/: AssetManager.cpp  AssetManager.h  GameManager.h  SaveManager.cpp  SaveManager.h  Settings.h  main.cpp
src/engine/: MatchEngine.cpp  MatchEngine.h
src/models/: CareerManager.cpp  CareerManager.h  Database.cpp  Database.h  NameGenerator.cpp  NameGenerator.h  Player.cpp  Player.h
src/screens/: AwardsScreen.cpp  AwardsScreen.h  CareerHubScreen.cpp  CareerHubScreen.h  EuropeanCupScreen.cpp  EuropeanCupScreen.h  EventScreen.cpp  EventScreen.h  InterviewScreen.cpp  InterviewScreen.h  LeagueTableScreen.cpp  LeagueTableScreen.h  MatchScreen.cpp  MatchScreen.h  MatchScreenEpisodes.cpp  MatchStatsScreen.cpp  MatchStatsScreen.h  MenuScreen.cpp  MyStatusScreen.cpp  MyStatusScreen.h  NewCareerScreen.cpp  NewCareerScreen.h  Screen.h  SeasonEndScreen.cpp  SeasonEndScreen.h  SettingsScreen.cpp  SquadScreen.cpp  SquadScreen.h  TrainingScreen.h  TransferScreen.cpp  TransferScreen.h  UpgradeScreen.cpp
src/ui/: TimingBar.cpp  TimingBar.h  UITheme.h
